--- a/app/views/mixtapes/show.html.erb
+++ b/app/views/mixtapes/show.html.erb
@@ -9,7 +9,8 @@
       <% end %>
 
       <p class='my-2'>
-        <%= visibility_badge @mixtape %>
+        <%= visibility_badge @mixtape if @mixtape.user == Current.user %>
+
         <i>by</i>
         <%= link_to @mixtape.user.handle, @mixtape.user.path %>
 
